src/app/cluster/cluster-details/node-list/node-list.component.scss
@import "../../../../assets/css/colors";

.km-conditionsMessage {
  border-top: 1px solid rgba($border, 0.3);
  margin-bottom: 10px;
  margin-top: -20px;
  line-height: 40px;
  p {
    margin: 0 auto;
    color: $warning-status-color;
  }
}

.health-state {
  text-align: center;

  i.red {
    color: $waiting-status-color;
  }

  i.green {
    color: $healthy-status-color;
  }

  i.orange {
    color: $waiting-status-color;
  }
}

.km-delete-node, .km-duplicate-node {
  color: $text-color !important;

  i {
    font-size: 18px;
  }
}

.km-spinner {
  float: right;
  margin: 5px;
}

.km-btn-remove-node-wrapper{
  position: relative;
}

.node-list-spinner {
  margin: 20px auto !important;
}

.os-image {
  max-height: 20px;
  max-width: 65px;
}

i.fa-info-circle {
  color: $border;
  padding-left: 5px;
}

.node-details-wrapper {
  background-color: $light-background;
  margin-left: -24px;
  margin-right: -24px;
  padding: 23px 20px 15px;
  box-shadow: inset 0px 4px 4px rgba($text-color, 0.1);
}

.node-details-content {
  background-color: #ffffff;
  padding: 10px 24px;
  line-height: 40px;

  .km-card-list, .km-card-list-content {
    margin: 0;
      .mat-card-content {
        line-height: 25px;
      }
  }

  .fa-check {
    color: $healthy-status-color;
  }

  .fa-times {
    color: $warning-status-color;
  }
}

.km-mat-card-code-block {
  margin-top: 20px;
}

.disabled {
  color: $disabled-button-color
}

